update slides etc.

--- a/bitsy.html
+++ b/bitsy.html
@@ -345,15 +345,19 @@ Alice McGrath &amp; Cameron Boucher
 <ol type="1">
 <li>What is Bitsy? Overview and examples.</li>
 <li>The Bitsy Editor</li>
-<li>Planning your game</li>
+<li>Planning and developing your game</li>
 <li>Saving and publishing your game</li>
 </ol>
 </section>
 
-<section id="bitsy" class="title-slide slide level1 center">
+<section id="bitsy" class="title-slide slide level1 center" data-background-color="indigo">
 <h1>Bitsy</h1>
 <p><img data-src="media/bitsy-cat.png"> <!-- {.width=10} --></p>
-<p><a href="https://www.bitsy.org/">bitsy.org</a> - an open-source 8-bit game building tool that is very easy to learn</p>
+<p><a href="https://www.bitsy.org/">bitsy.org</a></p>
+<ul>
+<li>A simple tool for building 8-bit games</li>
+<li>Open source and easy-to-learn</li>
+</ul>
 </section>
 
 <section>
@@ -385,7 +389,7 @@ Alice McGrath &amp; Cameron Boucher
 <li class="fragment">Non-player characters to interact with</li>
 <li class="fragment">Objects to pick up (can be counted)</li>
 <li class="fragment">Exits and entrances (can have conditions/require keys)</li>
-<li class="fragment">Music and sound effects</li>
+<li class="fragment">Music, sound effects, and simple animation options</li>
 </ul>
 </div>
 </section></section>
