update readme and slides

--- a/bitsy.html
+++ b/bitsy.html
@@ -355,8 +355,8 @@ Alice McGrath &amp; Cameron Boucher
 <p><img data-src="media/bitsy-cat.png"> <!-- {.width=10} --></p>
 <p><a href="https://www.bitsy.org/">bitsy.org</a></p>
 <ul>
-<li>A simple tool for building 8-bit games</li>
-<li>Open source and easy-to-learn</li>
+<li>A tool for building <a href="https://en.wikipedia.org/wiki/Third_generation_of_video_game_consoles">8-bit video games</a></li>
+<li>Open-source, browser-based, and easy-to-learn</li>
 </ul>
 </section>
 
