--- a/bitsy.html
+++ b/bitsy.html
@@ -366,6 +366,8 @@ Alice McGrath &amp; Cameron Boucher
 <ul>
 <li><a href="https://skwabrynmawr.github.io/SUEY/CHOPSUEY.html">Chop Suey</a> by Shiamin Kwa</li>
 <li><a href="https://haraiva.itch.io/under-a-star-called-sun">Under a star called sun</a> by Cecile Richard</li>
+<li><a href="https://ruin.itch.io/pasta-bake">pasta bake</a> by <a href="https://ruin.itch.io/">Ruin</a></li>
+<li><a href="https://enui.itch.io/allybread">Ally’s famous bread rolls</a> by <a href="https://enui.itch.io/">enui</a></li>
 </ul>
 </section>
 <section id="section" class="slide level2 smaller">
@@ -378,7 +380,7 @@ Alice McGrath &amp; Cameron Boucher
 <h2></h2>
 <iframe src="https://atmcgrath.github.io/kitten-game/" width="600" height="600">
 </iframe>
-<p><a href="https://atmcgrath.github.io/kitten-game/">Kitten-wrangler</a> a Bitsy game by Alice McGrath; <a href="https://github.com/atmcgrath/kitten-game">GitHub Repository</a></p>
+<p><a href="https://atmcgrath.github.io/kitten-game/">Kitten-wrangler</a> by Alice McGrath. On GitHub: <a href="https://github.com/atmcgrath/kitten-game">atmcgrath/kitten-game</a></p>
 </section>
 <section id="features-of-a-bitsy-game" class="slide level2">
 <h2>Features of a Bitsy game</h2>
@@ -398,30 +400,30 @@ Alice McGrath &amp; Cameron Boucher
 <h1>The Bitsy Editor</h1>
 <p>A tour of the Bitsy editor interface: <a href="https://make.bitsy.org/">make.bitsy.org/</a></p>
 </section>
-<section id="menu" class="slide level2 scrollable">
-<h2>Menu</h2>
+<section id="editor-windows" class="slide level2 scrollable smaller">
+<h2>Editor windows</h2>
 <ul>
-<li>Tools: show the menu of tools, click to open each one</li>
-<li>Play: test out your game</li>
-<li>About: documentation</li>
-<li>Game: load or save your game</li>
-<li>Room: the spaces your player interacts
+<li><strong>tools</strong>: show the menu of tools, click to open each one</li>
+<li><strong>play</strong>: test out your game</li>
+<li><strong>about</strong>: instructions and documentation</li>
+<li><strong>game</strong>: load or save your game</li>
+<li><strong>room</strong>: the spaces your player interacts
 <ul>
 <li>The main editor interface: links up all the other windows</li>
 </ul></li>
-<li>Paint: design and add your characters and objects
+<li><strong>paint</strong>: design and add your characters and objects
 <ul>
 <li>avatar: your player</li>
 <li>tile: an obstacle square</li>
 <li>sprite: NPC who can deliver information</li>
 <li>item: objects you collect</li>
 </ul></li>
-<li>Exits and endings: what happens when you finish a room</li>
-<li>Colors: customize colors</li>
-<li>Dialog: UI text and narrative elements (interaction conditions)</li>
-<li>Tune and Blip: music and sound effects</li>
-<li>Find: search among your game resources</li>
-<li>Inventory: keep track of items and variables</li>
+<li><strong>exits &amp; endings</strong>: what happens when you finish a room</li>
+<li><strong>colors</strong>: customize colors</li>
+<li><strong>dialog</strong>: UI text and narrative elements (interaction conditions)</li>
+<li><strong>tune</strong> and <strong>blip</strong>: music and sound effects</li>
+<li><strong>find</strong>: search among your game resources</li>
+<li><strong>inventory</strong>: keep track of items and variables</li>
 </ul>
 </section></section>
 <section>
