updating editor window slide

--- a/bitsy.html
+++ b/bitsy.html
@@ -407,10 +407,7 @@ Alice McGrath &amp; Cameron Boucher
 <li><strong>play</strong>: test out your game</li>
 <li><strong>about</strong>: instructions and documentation</li>
 <li><strong>game</strong>: load or save your game</li>
-<li><strong>room</strong>: the spaces your player interacts
-<ul>
-<li>The main editor interface: links up all the other windows</li>
-</ul></li>
+<li><strong>room</strong>: the main editor for the space of your game</li>
 <li><strong>paint</strong>: design and add your characters and objects
 <ul>
 <li>avatar: your player</li>
