updates to slideshow

--- a/bitsy.html
+++ b/bitsy.html
@@ -403,17 +403,17 @@ Alice McGrath &amp; Cameron Boucher
 <section id="editor-windows" class="slide level2 scrollable smaller">
 <h2>Editor windows</h2>
 <ul>
-<li><strong>tools</strong>: show the menu of tools, click to open each one</li>
+<li><strong>tools</strong>: show the menu of tool windows, select which ones to toggle on</li>
 <li><strong>play</strong>: test out your game</li>
 <li><strong>about</strong>: instructions and documentation</li>
 <li><strong>game</strong>: load or save your game</li>
 <li><strong>room</strong>: the main editor for the space of your game</li>
 <li><strong>paint</strong>: design and add your characters and objects
 <ul>
-<li>avatar: your player</li>
-<li>tile: an obstacle square</li>
-<li>sprite: NPC who can deliver information</li>
-<li>item: objects you collect</li>
+<li><strong>avatar</strong>: your player</li>
+<li><strong>tile</strong>: an obstacle square</li>
+<li><strong>sprite</strong>: NPC who can deliver information</li>
+<li><strong>item</strong>: objects you collect</li>
 </ul></li>
 <li><strong>exits &amp; endings</strong>: what happens when you finish a room</li>
 <li><strong>colors</strong>: customize colors</li>
@@ -451,16 +451,26 @@ Alice McGrath &amp; Cameron Boucher
 <li>What should the spaces</li>
 </ul>
 </section></section>
+<section>
 <section id="your-turn" class="title-slide slide level1 scrollable center">
 <h1>Your turn!</h1>
 <ul>
 <li>Create two rooms</li>
 <li>Create an exit/entrance between the two rooms</li>
+<li>Create an ending</li>
 <li>Place tiles to create obstacles</li>
 <li>Place your sprite and items</li>
+<li>Edit your user interface dialog</li>
 </ul>
 </section>
-
+<section id="challenges" class="slide level2">
+<h2>Challenges</h2>
+<ul>
+<li>Customize your colors</li>
+<li>Customize your avatar, sprites, tiles, and items</li>
+<li>Create a locked exit</li>
+</ul>
+</section></section>
 <section>
 <section id="end-game" class="title-slide slide level1 center" data-background-color="indigo">
 <h1>End-game</h1>
