--- a/bitsy.html
+++ b/bitsy.html
@@ -442,25 +442,29 @@ Alice McGrath &amp; Cameron Boucher
 <ul>
 <li>How will your player know what to do?
 <ul>
-<li>Dialogues and Sprite interactions</li>
+<li>Dialogs and Sprite interactions</li>
+</ul></li>
+<li>What are the spaces/levels/narrative beats?
+<ul>
+<li>Rooms, dialogs</li>
 </ul></li>
 <li>Set up challenges and conditions
 <ul>
-<li>Locked exits, dialogs</li>
+<li>Locked exits, dialogs, variables</li>
 </ul></li>
-<li>What should the spaces</li>
 </ul>
 </section></section>
 <section>
 <section id="your-turn" class="title-slide slide level1 scrollable center">
 <h1>Your turn!</h1>
 <ul>
-<li>Create two rooms</li>
-<li>Create an exit/entrance between the two rooms</li>
+<li>Give your game a title</li>
+<li>Create two rooms and customize them with tiles</li>
+<li>Create an exit to link the two rooms</li>
+<li>Place a sprite and some items</li>
 <li>Create an ending</li>
-<li>Place tiles to create obstacles</li>
-<li>Place your sprite and items</li>
-<li>Edit your user interface dialog</li>
+<li>Edit and add dialogs</li>
+<li>Play your game to test it out!</li>
 </ul>
 </section>
 <section id="challenges" class="slide level2">
@@ -469,6 +473,7 @@ Alice McGrath &amp; Cameron Boucher
 <li>Customize your colors</li>
 <li>Customize your avatar, sprites, tiles, and items</li>
 <li>Create a locked exit</li>
+<li>Customize music and blips</li>
 </ul>
 </section></section>
 <section>
