--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ header, .context-menu, .megamenu-content, footer{
 
 
  @media print { @page {margin: 0 0 0 0;} body.typora-export {padding-left: 0; padding-right: 0;} #write {padding:0;}}
-</style><title>index</title>
+</style><title>Workshops</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
 <div id='write'  class=''><h1 id='workshops'><span>Workshops</span></h1><p><span>Alice McGrath, Interim Director of Educational &amp; Scholarly Technology @ Bryn Mawr College</span></p><h2 id='list'><span>List</span></h2><ul><li><p><a href='bitsy'><span>Creative Coding with Bitsy</span></a><span> - Workshop for COML 281, April 2 2025</span></p></li></ul><p><span>Made with Revealjs and Quarto</span></p><p><a href='https://github.com/atmcgrath/workshops/'><span>github repository</span></a></p><p>&nbsp;</p></div></div>
